cluster/apps/media/media-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: media-ingress
#  namespace: media
spec:
  rules:
    - host: sonarr.home.cloud
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
              service: 
                name: sonarr
                port:
                  number: 8989
    - host: radarr.home.cloud
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
              service:
                name: radarr
                port:
                  number: 7878
    - host: nzbget.home.cloud
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
              service:
                name: nzbget
                port:
                  number: 80
    - host: nzbhydra2.home.cloud
      http:
        paths:
        - pathType: Prefix
          path: /
          backend:
              service:
                name: nzbhydra2
                port:
                  number: 5076
